adding plotjuggler stuff
(cherry picked from commit acb109c290a3a776a201e0e0e7855ea9a4ec4ffb)

--- a/tools/plotjuggler/layouts/analyzing-panda-block-angle-hkg.xml
+++ b/tools/plotjuggler/layouts/analyzing-panda-block-angle-hkg.xml
@@ -3,31 +3,31 @@
  <tabbed_widget parent="main_window" name="Main Window">
   <Tab tab_name="actuator data" containers="1">
    <Container>
-    <DockSplitter orientation="-" sizes="0.25;0.25;0.25;0.25" count="4">
+    <DockSplitter sizes="0.25;0.25;0.25;0.25" count="4" orientation="-">
      <DockArea name="...">
-      <plot style="Lines" mode="TimeSeries" flip_x="false" flip_y="false">
-       <range bottom="-1.050000" top="1.050000" right="722.420439" left="0.000000"/>
+      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
+       <range bottom="-1.050000" top="1.050000" right="590.696728" left="429.901019"/>
        <limitY/>
        <curve color="#17becf" name="/carControl/actuators/torque"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" mode="TimeSeries" flip_x="false" flip_y="false">
-       <range bottom="-453.043646" top="538.555487" right="722.420439" left="0.000000"/>
+      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
+       <range bottom="-385.132391" top="536.899115" right="590.696728" left="429.901019"/>
        <limitY/>
        <curve color="#1f77b4" name="/carControl/actuators/steeringAngleDeg"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" mode="TimeSeries" flip_x="false" flip_y="false">
-       <range bottom="-0.647461" top="26.545898" right="722.420439" left="0.000000"/>
+      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
+       <range bottom="-0.364800" top="14.956815" right="590.696728" left="429.901019"/>
        <limitY/>
        <curve color="#ff7f0e" name="/carState/vEgoRaw"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" mode="TimeSeries" flip_x="false" flip_y="false">
-       <range bottom="-0.209157" top="0.175448" right="722.420439" left="0.000000"/>
+      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
+       <range bottom="-0.208517" top="0.149191" right="590.696728" left="429.901019"/>
        <limitY/>
        <curve color="#f14cc1" name="/carControl/actuators/curvature"/>
       </plot>
@@ -37,41 +37,40 @@
   </Tab>
   <Tab tab_name="steering messages (CAN)" containers="1">
    <Container>
-    <DockSplitter orientation="-" sizes="0.200218;0.200218;0.199129;0.200218;0.200218" count="5">
+    <DockSplitter sizes="0.200218;0.200218;0.199129;0.200218;0.200218" count="5" orientation="-">
      <DockArea name="...">
-      <plot style="Lines" mode="TimeSeries" flip_x="false" flip_y="false">
-       <range bottom="-189.000000" top="189.000000" right="723.115449" left="6.371879"/>
+      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
+       <range bottom="-189.000000" top="189.000000" right="590.696728" left="429.901019"/>
        <limitY/>
-       <curve color="#b6ff00" name="/can/128/LKAS_ALT/LKAS_ANGLE_CMD"/>
-       <curve color="#00fab2" name="/can/0/LKAS_ALT/LKAS_ANGLE_CMD"/>
-       <curve color="#d62728" name="/can/192/LKAS_ALT/LKAS_ANGLE_CMD"/>
+       <curve color="#1ac938" name="/can/2/LKAS_ALT/LKAS_ANGLE_CMD"/>
+       <curve color="#9467bd" name="/can/128/LKAS_ALT/LKAS_ANGLE_CMD"/>
+       <curve color="#ff0e1c" name="/can/192/LKAS_ALT/LKAS_ANGLE_CMD"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" mode="TimeSeries" flip_x="false" flip_y="false">
-       <range bottom="-6.250000" top="256.250000" right="722.420439" left="6.497277"/>
+      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
+       <range bottom="-6.200000" top="254.200000" right="590.696728" left="429.901019"/>
        <limitY/>
-       <curve color="#00ffe8" name="/can/128/LKAS_ALT/LKAS_ANGLE_MAX_TORQUE"/>
-       <curve color="#e5fd00" name="/can/0/LKAS_ALT/LKAS_ANGLE_MAX_TORQUE"/>
+       <curve color="#f14cc1" name="/can/128/LKAS_ALT/LKAS_ANGLE_MAX_TORQUE"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" mode="TimeSeries" flip_x="false" flip_y="false">
-       <range bottom="-4.399729" top="4.056632" right="722.420439" left="0.000000"/>
-       <limitY/>
-       <curve color="#ff7f0e" name="IMU_LatAccelVal_ms^2_roll_compensated"/>
-      </plot>
-     </DockArea>
-     <DockArea name="...">
-      <plot style="Lines" mode="TimeSeries" flip_x="false" flip_y="false">
-       <range bottom="-0.025000" top="1.025000" right="722.420439" left="0.000000"/>
+      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
+       <range bottom="-0.025000" top="1.025000" right="590.696728" left="429.901019"/>
        <limitY/>
        <curve color="#d62728" name="/carState/steeringPressed"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" mode="TimeSeries" flip_x="false" flip_y="false">
-       <range bottom="-0.025000" top="1.025000" right="722.420439" left="0.000000"/>
+      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
+       <range bottom="460.325000" top="1874.675000" right="590.696728" left="429.901019"/>
+       <limitY/>
+       <curve color="#1f77b4" name="/pandaStates/0/safetyTxBlocked"/>
+      </plot>
+     </DockArea>
+     <DockArea name="...">
+      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
+       <range bottom="-0.025000" top="1.025000" right="590.696728" left="429.901019"/>
        <limitY/>
        <curve color="#f14cc1" name="/can/1/CCNC_0x161/DAW_ICON"/>
       </plot>
@@ -81,17 +80,17 @@
   </Tab>
   <Tab tab_name="Understanding Torque" containers="1">
    <Container>
-    <DockSplitter orientation="-" sizes="0.5;0.5" count="2">
+    <DockSplitter sizes="0.5;0.5" count="2" orientation="-">
      <DockArea name="...">
-      <plot style="Lines" mode="TimeSeries" flip_x="false" flip_y="false">
-       <range bottom="-6.250000" top="256.250000" right="722.420439" left="0.000000"/>
+      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
+       <range bottom="-6.175000" top="253.175000" right="590.696728" left="429.901019"/>
        <limitY/>
        <curve color="#1f77b4" name="/can/1/LFA_ALT/LKAS_ANGLE_MAX_TORQUE"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" mode="TimeSeries" flip_x="false" flip_y="false">
-       <range bottom="-42.062501" top="78.162503" right="722.420439" left="0.000000"/>
+      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
+       <range bottom="-41.182501" top="42.082498" right="590.696728" left="429.901019"/>
        <limitY/>
        <curve color="#1ac938" name="/carState/steeringTorqueEps"/>
       </plot>
@@ -106,7 +105,7 @@
  <!-- - - - - - - - - - - - - - - -->
  <Plugins>
   <plugin ID="DataLoad CSV">
-   <default delimiter="0" time_axis=""/>
+   <default time_axis="" delimiter="0"/>
   </plugin>
   <plugin ID="DataLoad MCAP"/>
   <plugin ID="DataLoad Rlog"/>
@@ -125,84 +124,7 @@
  </Plugins>
  <!-- - - - - - - - - - - - - - - -->
  <!-- - - - - - - - - - - - - - - -->
- <customMathEquations>
-  <snippet name="Desired lateral accel (roll compensated)">
-   <global></global>
-   <function>return (value * v1 ^ 2) - (v2 * 9.81)</function>
-   <linked_source>/controlsState/desiredCurvature</linked_source>
-   <additional_sources>
-    <v1>/carState/vEgo</v1>
-    <v2>/liveParameters/roll</v2>
-   </additional_sources>
-  </snippet>
-  <snippet name="Actual lateral accel (roll compensated)">
-   <global></global>
-   <function>return (value * v1 ^ 2) - (v2 * 9.81)</function>
-   <linked_source>/controlsState/curvature</linked_source>
-   <additional_sources>
-    <v1>/carState/vEgo</v1>
-    <v2>/liveParameters/roll</v2>
-   </additional_sources>
-  </snippet>
-  <snippet name="IMU_LatAccelVal_ms^2_roll_compensated">
-   <global></global>
-   <function>if (v1 == 0 and v2 == 1) then
-  return  (value * -9.8) - (v3 * 9.81)
-end
---return 0
-  return  (value * -9.8) - (v3 * 9.81)</function>
-   <linked_source>/can/1/IMU_01_10ms/IMU_LatAccelVal</linked_source>
-   <additional_sources>
-    <v1>/carState/steeringPressed</v1>
-    <v2>/carControl/latActive</v2>
-    <v3>/liveParameters/roll</v3>
-   </additional_sources>
-  </snippet>
-  <snippet name="IMU_LatAccelVal_Ms^3">
-   <global></global>
-   <function>return  value * -9.8</function>
-   <linked_source>/can/1/IMU_01_10ms/IMU_LatAccelVal</linked_source>
-   <additional_sources>
-    <v1>/carState/steeringPressed</v1>
-    <v2>/carControl/latActive</v2>
-   </additional_sources>
-  </snippet>
-  <snippet name="IMU_LatAccelVal_Ms^2">
-   <global></global>
-   <function>if (v1 == 0 and v2 == 1) then
-  return  value * -9.8
-end
-return 0</function>
-   <linked_source>/can/1/IMU_01_10ms/IMU_LatAccelVal</linked_source>
-   <additional_sources>
-    <v1>/carState/steeringPressed</v1>
-    <v2>/carControl/latActive</v2>
-   </additional_sources>
-  </snippet>
-  <snippet name="roll compensated lateral acceleration">
-   <global></global>
-   <function>if (v3 == 0 and v4 == 1) then
-  return  (value * v1 ^ 2) - (v2 * 9.81)
-end
-return 0</function>
-   <linked_source>/controlsState/curvature</linked_source>
-   <additional_sources>
-    <v1>/carState/vEgo</v1>
-    <v2>/liveParameters/roll</v2>
-    <v3>/carState/steeringPressed</v3>
-    <v4>/carControl/latActive</v4>
-   </additional_sources>
-  </snippet>
-  <snippet name="IMU_LatAccelVal_ms^2">
-   <global></global>
-   <function>return  value * -9.8</function>
-   <linked_source>/can/1/IMU_01_10ms/IMU_LatAccelVal</linked_source>
-   <additional_sources>
-    <v1>/carState/steeringPressed</v1>
-    <v2>/carControl/latActive</v2>
-   </additional_sources>
-  </snippet>
- </customMathEquations>
+ <customMathEquations/>
  <snippets/>
  <!-- - - - - - - - - - - - - - - -->
 </root>
