--- a/tools/plotjuggler/layouts/analyzing-panda-block-angle-hkg.xml
+++ b/tools/plotjuggler/layouts/analyzing-panda-block-angle-hkg.xml
@@ -1,98 +1,95 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <root>
- <tabbed_widget parent="main_window" name="Main Window">
-  <Tab tab_name="actuator data" containers="1">
+ <tabbed_widget name="Main Window" parent="main_window">
+  <Tab containers="1" tab_name="actuator data">
    <Container>
-    <DockSplitter sizes="0.25;0.25;0.25;0.25" count="4" orientation="-">
+    <DockSplitter orientation="-" sizes="0.25;0.25;0.25;0.25" count="4">
      <DockArea name="...">
-      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
-       <range bottom="-1.050000" top="1.050000" right="590.696728" left="429.901019"/>
+      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
+       <range right="558.699945" bottom="-1.050000" top="1.050000" left="6.491930"/>
        <limitY/>
-       <curve color="#17becf" name="/carControl/actuators/torque"/>
+       <curve name="/carControl/actuators/torque" color="#17becf"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
-       <range bottom="-385.132391" top="536.899115" right="590.696728" left="429.901019"/>
+      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
+       <range right="558.699945" bottom="-553.384988" top="395.185006" left="6.491930"/>
        <limitY/>
-       <curve color="#1f77b4" name="/carControl/actuators/steeringAngleDeg"/>
+       <curve name="/carControl/actuators/steeringAngleDeg" color="#1f77b4"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
-       <range bottom="-0.364800" top="14.956815" right="590.696728" left="429.901019"/>
+      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
+       <range right="558.699945" bottom="-0.444933" top="18.242243" left="6.491930"/>
        <limitY/>
-       <curve color="#ff7f0e" name="/carState/vEgoRaw"/>
+       <curve name="/carState/vEgoRaw" color="#ff7f0e"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
-       <range bottom="-0.208517" top="0.149191" right="590.696728" left="429.901019"/>
+      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
+       <range right="558.699945" bottom="-0.119883" top="0.177208" left="6.491930"/>
        <limitY/>
-       <curve color="#f14cc1" name="/carControl/actuators/curvature"/>
+       <curve name="/carControl/actuators/curvature" color="#f14cc1"/>
       </plot>
      </DockArea>
     </DockSplitter>
    </Container>
   </Tab>
-  <Tab tab_name="steering messages (CAN)" containers="1">
+  <Tab containers="1" tab_name="steering messages (CAN)">
    <Container>
-    <DockSplitter sizes="0.200218;0.200218;0.199129;0.200218;0.200218" count="5" orientation="-">
+    <DockSplitter orientation="-" sizes="0.200218;0.200218;0.199129;0.200218;0.200218" count="5">
      <DockArea name="...">
-      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
-       <range bottom="-189.000000" top="189.000000" right="590.696728" left="429.901019"/>
+      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
+       <range right="558.699945" bottom="-0.025000" top="1.025000" left="6.491930"/>
        <limitY/>
-       <curve color="#1ac938" name="/can/2/LKAS_ALT/LKAS_ANGLE_CMD"/>
-       <curve color="#9467bd" name="/can/128/LKAS_ALT/LKAS_ANGLE_CMD"/>
-       <curve color="#ff0e1c" name="/can/192/LKAS_ALT/LKAS_ANGLE_CMD"/>
+       <curve name="/can/128/LKAS_ALT/ADAS_ACIAnglTqRedcGainVal" color="#1f77b4"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
-       <range bottom="-6.200000" top="254.200000" right="590.696728" left="429.901019"/>
+      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
+       <range right="558.699945" bottom="-189.000000" top="189.000000" left="6.491930"/>
        <limitY/>
-       <curve color="#f14cc1" name="/can/128/LKAS_ALT/LKAS_ANGLE_MAX_TORQUE"/>
+       <curve name="/can/128/LKAS_ALT/ADAS_StrAnglReqVal" color="#d62728"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
-       <range bottom="-0.025000" top="1.025000" right="590.696728" left="429.901019"/>
+      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
+       <range right="558.699945" bottom="-0.025000" top="1.025000" left="6.491930"/>
        <limitY/>
-       <curve color="#d62728" name="/carState/steeringPressed"/>
+       <curve name="/carState/steeringPressed" color="#d62728"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
-       <range bottom="460.325000" top="1874.675000" right="590.696728" left="429.901019"/>
+      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
+       <range right="558.699945" bottom="-4.150000" top="170.150000" left="6.491930"/>
        <limitY/>
-       <curve color="#1f77b4" name="/pandaStates/0/safetyTxBlocked"/>
+       <curve name="/pandaStates/0/safetyTxBlocked" color="#1f77b4"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
-       <range bottom="-0.025000" top="1.025000" right="590.696728" left="429.901019"/>
+      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
+       <range right="558.699945" bottom="-0.025000" top="1.025000" left="6.491930"/>
        <limitY/>
-       <curve color="#f14cc1" name="/can/1/CCNC_0x161/DAW_ICON"/>
+       <curve name="/can/1/CCNC_0x161/DAW_ICON" color="#f14cc1"/>
       </plot>
      </DockArea>
     </DockSplitter>
    </Container>
   </Tab>
-  <Tab tab_name="Understanding Torque" containers="1">
+  <Tab containers="1" tab_name="Understanding Torque">
    <Container>
-    <DockSplitter sizes="0.5;0.5" count="2" orientation="-">
+    <DockSplitter orientation="-" sizes="0.5;0.5" count="2">
      <DockArea name="...">
-      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
-       <range bottom="-6.175000" top="253.175000" right="590.696728" left="429.901019"/>
+      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
+       <range right="590.696728" bottom="-6.175000" top="253.175000" left="429.901019"/>
        <limitY/>
-       <curve color="#1f77b4" name="/can/1/LFA_ALT/LKAS_ANGLE_MAX_TORQUE"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_x="false" flip_y="false" style="Lines" mode="TimeSeries">
-       <range bottom="-41.182501" top="42.082498" right="590.696728" left="429.901019"/>
+      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
+       <range right="558.699945" bottom="-107.707498" top="64.807501" left="6.491930"/>
        <limitY/>
-       <curve color="#1ac938" name="/carState/steeringTorqueEps"/>
+       <curve name="/carState/steeringTorqueEps" color="#1ac938"/>
       </plot>
      </DockArea>
     </DockSplitter>
