--- a/tools/plotjuggler/layouts/analyzing-panda-block-angle-hkg.xml
+++ b/tools/plotjuggler/layouts/analyzing-panda-block-angle-hkg.xml
@@ -1,33 +1,33 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <root>
  <tabbed_widget name="Main Window" parent="main_window">
-  <Tab containers="1" tab_name="actuator data">
+  <Tab tab_name="actuator data" containers="1">
    <Container>
-    <DockSplitter orientation="-" sizes="0.25;0.25;0.25;0.25" count="4">
+    <DockSplitter sizes="0.25;0.25;0.25;0.25" count="4" orientation="-">
      <DockArea name="...">
-      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
-       <range right="558.699945" bottom="-1.050000" top="1.050000" left="6.491930"/>
+      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
+       <range right="376.602125" left="368.465617" bottom="-0.100000" top="0.100000"/>
        <limitY/>
        <curve name="/carControl/actuators/torque" color="#17becf"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
-       <range right="558.699945" bottom="-553.384988" top="395.185006" left="6.491930"/>
+      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
+       <range right="376.602125" left="368.465617" bottom="-129.414922" top="81.867986"/>
        <limitY/>
        <curve name="/carControl/actuators/steeringAngleDeg" color="#1f77b4"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
-       <range right="558.699945" bottom="-0.444933" top="18.242243" left="6.491930"/>
+      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
+       <range right="376.602125" left="368.465617" bottom="0.977702" top="10.773600"/>
        <limitY/>
        <curve name="/carState/vEgoRaw" color="#ff7f0e"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
-       <range right="558.699945" bottom="-0.119883" top="0.177208" left="6.491930"/>
+      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
+       <range right="376.602125" left="368.465617" bottom="-0.028790" top="0.046017"/>
        <limitY/>
        <curve name="/carControl/actuators/curvature" color="#f14cc1"/>
       </plot>
@@ -35,40 +35,41 @@
     </DockSplitter>
    </Container>
   </Tab>
-  <Tab containers="1" tab_name="steering messages (CAN)">
+  <Tab tab_name="steering messages (CAN)" containers="1">
    <Container>
-    <DockSplitter orientation="-" sizes="0.200218;0.200218;0.199129;0.200218;0.200218" count="5">
+    <DockSplitter sizes="0.200218;0.200218;0.199129;0.200218;0.200218" count="5" orientation="-">
      <DockArea name="...">
-      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
-       <range right="558.699945" bottom="-0.025000" top="1.025000" left="6.491930"/>
+      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
+       <range right="376.602125" left="368.465617" bottom="0.077500" top="1.022500"/>
        <limitY/>
        <curve name="/can/128/LKAS_ALT/ADAS_ACIAnglTqRedcGainVal" color="#1f77b4"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
-       <range right="558.699945" bottom="-189.000000" top="189.000000" left="6.491930"/>
+      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
+       <range right="376.602125" left="368.465617" bottom="-146.187738" top="80.597360"/>
        <limitY/>
-       <curve name="/can/128/LKAS_ALT/ADAS_StrAnglReqVal" color="#d62728"/>
+       <curve name="/can/128/LKAS_ALT/ADAS_StrAnglReqVal" color="#29d627"/>
+       <curve name="/can/192/LKAS_ALT/ADAS_StrAnglReqVal" color="#b41f32"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
-       <range right="558.699945" bottom="-0.025000" top="1.025000" left="6.491930"/>
+      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
+       <range right="376.602125" left="368.465617" bottom="-0.025000" top="1.025000"/>
        <limitY/>
        <curve name="/carState/steeringPressed" color="#d62728"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
-       <range right="558.699945" bottom="-4.150000" top="170.150000" left="6.491930"/>
+      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
+       <range right="376.602125" left="368.465617" bottom="149.100000" top="396.900000"/>
        <limitY/>
        <curve name="/pandaStates/0/safetyTxBlocked" color="#1f77b4"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
-       <range right="558.699945" bottom="-0.025000" top="1.025000" left="6.491930"/>
+      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
+       <range right="376.602125" left="368.465617" bottom="-0.025000" top="1.025000"/>
        <limitY/>
        <curve name="/can/1/CCNC_0x161/DAW_ICON" color="#f14cc1"/>
       </plot>
@@ -76,18 +77,18 @@
     </DockSplitter>
    </Container>
   </Tab>
-  <Tab containers="1" tab_name="Understanding Torque">
+  <Tab tab_name="Understanding Torque" containers="1">
    <Container>
-    <DockSplitter orientation="-" sizes="0.5;0.5" count="2">
+    <DockSplitter sizes="0.5;0.5" count="2" orientation="-">
      <DockArea name="...">
-      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
-       <range right="590.696728" bottom="-6.175000" top="253.175000" left="429.901019"/>
+      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
+       <range right="590.696728" left="429.901019" bottom="-6.175000" top="253.175000"/>
        <limitY/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot style="Lines" flip_x="false" mode="TimeSeries" flip_y="false">
-       <range right="558.699945" bottom="-107.707498" top="64.807501" left="6.491930"/>
+      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
+       <range right="376.602125" left="368.465617" bottom="-19.564999" top="12.565000"/>
        <limitY/>
        <curve name="/carState/steeringTorqueEps" color="#1ac938"/>
       </plot>
@@ -102,7 +103,7 @@
  <!-- - - - - - - - - - - - - - - -->
  <Plugins>
   <plugin ID="DataLoad CSV">
-   <default time_axis="" delimiter="0"/>
+   <default delimiter="0" time_axis=""/>
   </plugin>
   <plugin ID="DataLoad MCAP"/>
   <plugin ID="DataLoad Rlog"/>
@@ -120,6 +121,12 @@
   <plugin ID="CSV Exporter"/>
  </Plugins>
  <!-- - - - - - - - - - - - - - - -->
+ <previouslyLoaded_Datafiles>
+  <fileInfo filename="../tmpkgs3ntkk.rlog" prefix="">
+   <selected_datasources value=""/>
+   <plugin ID="DataLoad Rlog"/>
+  </fileInfo>
+ </previouslyLoaded_Datafiles>
  <!-- - - - - - - - - - - - - - - -->
  <customMathEquations/>
  <snippets/>
