--- a/tools/plotjuggler/layouts/analyzing-panda-block-angle-hkg.xml
+++ b/tools/plotjuggler/layouts/analyzing-panda-block-angle-hkg.xml
@@ -1,102 +1,167 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <root>
  <tabbed_widget name="Main Window" parent="main_window">
-  <Tab tab_name="actuator data" containers="1">
+  <Tab containers="1" tab_name="actuator data">
    <Container>
-    <DockSplitter sizes="0.25;0.25;0.25;0.25" count="4" orientation="-">
+    <DockSplitter orientation="-" sizes="0.25;0.25;0.25;0.25" count="4">
      <DockArea name="...">
-      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
-       <range right="376.602125" left="368.465617" bottom="-0.100000" top="0.100000"/>
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="0.100000" right="1089.390562" bottom="-0.100000"/>
        <limitY/>
-       <curve name="/carControl/actuators/torque" color="#17becf"/>
+       <curve color="#17becf" name="/carControl/actuators/torque"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
-       <range right="376.602125" left="368.465617" bottom="-129.414922" top="81.867986"/>
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="-57.706462" right="1089.390562" bottom="-64.261323"/>
        <limitY/>
-       <curve name="/carControl/actuators/steeringAngleDeg" color="#1f77b4"/>
+       <curve color="#1f77b4" name="/carControl/actuators/steeringAngleDeg"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
-       <range right="376.602125" left="368.465617" bottom="0.977702" top="10.773600"/>
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="13.550727" right="1089.390562" bottom="13.079047"/>
        <limitY/>
-       <curve name="/carState/vEgoRaw" color="#ff7f0e"/>
+       <curve color="#ff7f0e" name="/carState/vEgoRaw"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
-       <range right="376.602125" left="368.465617" bottom="-0.028790" top="0.046017"/>
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="0.017108" right="1089.390562" bottom="0.015457"/>
        <limitY/>
-       <curve name="/carControl/actuators/curvature" color="#f14cc1"/>
+       <curve color="#f14cc1" name="/carControl/actuators/curvature"/>
       </plot>
      </DockArea>
     </DockSplitter>
    </Container>
   </Tab>
-  <Tab tab_name="steering messages (CAN)" containers="1">
+  <Tab containers="1" tab_name="steering messages (CAN)">
    <Container>
-    <DockSplitter sizes="0.200218;0.200218;0.199129;0.200218;0.200218" count="5" orientation="-">
+    <DockSplitter orientation="-" sizes="0.142857;0.142857;0.142857;0.142857;0.142857;0.142857;0.142857" count="7">
      <DockArea name="...">
-      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
-       <range right="376.602125" left="368.465617" bottom="0.077500" top="1.022500"/>
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="0.618500" right="1089.390562" bottom="0.345500"/>
        <limitY/>
-       <curve name="/can/128/LKAS_ALT/ADAS_ACIAnglTqRedcGainVal" color="#1f77b4"/>
+       <curve color="#1f77b4" name="/can/128/LKAS_ALT/ADAS_ACIAnglTqRedcGainVal"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
-       <range right="376.602125" left="368.465617" bottom="-146.187738" top="80.597360"/>
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="-47.925000" right="1089.390562" bottom="-51.075000"/>
        <limitY/>
-       <curve name="/can/128/LKAS_ALT/ADAS_StrAnglReqVal" color="#29d627"/>
-       <curve name="/can/192/LKAS_ALT/ADAS_StrAnglReqVal" color="#b41f32"/>
+       <curve color="#29d627" name="/can/128/LKAS_ALT/ADAS_StrAnglReqVal"/>
+       <curve color="#b41f32" name="/can/192/LKAS_ALT/ADAS_StrAnglReqVal"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
-       <range right="376.602125" left="368.465617" bottom="-0.025000" top="1.025000"/>
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="1.025000" right="1089.390562" bottom="-0.025000"/>
        <limitY/>
-       <curve name="/carState/steeringPressed" color="#d62728"/>
+       <curve color="#d62728" name="/carState/steeringPressed"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
-       <range right="376.602125" left="368.465617" bottom="149.100000" top="396.900000"/>
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="2.100000" right="1089.390562" bottom="1.900000"/>
        <limitY/>
-       <curve name="/pandaStates/0/safetyTxBlocked" color="#1f77b4"/>
+       <curve color="#1f77b4" name="/sendcan/0/LKAS_ALT/LKAS_ANGLE_ACTIVE"/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
-       <range right="376.602125" left="368.465617" bottom="-0.025000" top="1.025000"/>
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="1.025000" right="1089.390562" bottom="-0.025000"/>
        <limitY/>
-       <curve name="/can/1/CCNC_0x161/DAW_ICON" color="#f14cc1"/>
+       <curve color="#d62728" name="/carState/steerFaultTemporary"/>
+       <curve color="#1ac938" name="/carControl/latActive"/>
+      </plot>
+     </DockArea>
+     <DockArea name="...">
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="0.100000" right="1089.390562" bottom="-0.100000"/>
+       <limitY/>
+       <curve color="#ff7f0e" name="/can/1/MDPS/LKA_ANGLE_FAULT"/>
+       <curve color="#f14cc1" name="/can/1/CCNC_0x161/DAW_ICON"/>
+      </plot>
+     </DockArea>
+     <DockArea name="...">
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="575.775000" right="1089.390562" bottom="543.225000"/>
+       <limitY/>
+       <curve color="#1f77b4" name="/pandaStates/0/safetyTxBlocked"/>
       </plot>
      </DockArea>
     </DockSplitter>
    </Container>
   </Tab>
-  <Tab tab_name="Understanding Torque" containers="1">
+  <Tab containers="1" tab_name="Understanding Torque">
    <Container>
-    <DockSplitter sizes="0.5;0.5" count="2" orientation="-">
+    <DockSplitter orientation="-" sizes="0.5;0.5" count="2">
      <DockArea name="...">
-      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
-       <range right="590.696728" left="429.901019" bottom="-6.175000" top="253.175000"/>
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="429.901019" top="253.175000" right="590.696728" bottom="-6.175000"/>
        <limitY/>
       </plot>
      </DockArea>
      <DockArea name="...">
-      <plot flip_y="false" style="Lines" mode="TimeSeries" flip_x="false">
-       <range right="376.602125" left="368.465617" bottom="-19.564999" top="12.565000"/>
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="7.607500" right="1089.390562" bottom="-38.907499"/>
        <limitY/>
-       <curve name="/carState/steeringTorqueEps" color="#1ac938"/>
+       <curve color="#1ac938" name="/carState/steeringTorqueEps"/>
       </plot>
      </DockArea>
     </DockSplitter>
    </Container>
   </Tab>
-  <currentTabIndex index="1"/>
+  <Tab containers="1" tab_name="tab2">
+   <Container>
+    <DockSplitter orientation="-" sizes="0.2;0.2;0.2;0.2;0.2" count="5">
+     <DockArea name="...">
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Dots">
+       <range left="1088.568879" top="0.758032" right="1089.390562" bottom="0.089680"/>
+       <limitY/>
+       <curve color="#9467bd" name="/sendcan/0/LKAS_ALT/ADAS_ACIAnglTqRedcGainVal"/>
+       <curve color="#17becf" name="/can/1/LFA_ALT/ADAS_ACIAnglTqRedcGainVal"/>
+       <curve color="#1f77b4" name="/can/128/LKAS_ALT/ADAS_ACIAnglTqRedcGainVal"/>
+       <curve color="#d62728" name="/can/192/LKAS_ALT/ADAS_ACIAnglTqRedcGainVal"/>
+      </plot>
+     </DockArea>
+     <DockArea name="...">
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Dots">
+       <range left="1088.568879" top="2.050000" right="1089.390562" bottom="-0.050000"/>
+       <limitY/>
+       <curve color="#ff0e22" name="/can/1/MDPS/LKA_ANGLE_FAULT"/>
+       <curve color="#b8c91a" name="/can/128/LKAS_ALT/LKAS_ANGLE_ACTIVE"/>
+       <curve color="#ff7f0e" name="/can/192/LKAS_ALT/LKAS_ANGLE_ACTIVE"/>
+      </plot>
+     </DockArea>
+     <DockArea name="...">
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Dots">
+       <range left="1088.568879" top="-44.792500" right="1089.390562" bottom="-53.507499"/>
+       <limitY/>
+       <curve color="#f14cc1" name="/carState/steeringAngleDeg"/>
+       <curve color="#9467bd" name="/carOutput/actuatorsOutput/steeringAngleDeg"/>
+       <curve color="#17becf" name="/can/192/LKAS_ALT/ADAS_StrAnglReqVal"/>
+       <curve color="#bcbd22" name="/can/128/LKAS_ALT/ADAS_StrAnglReqVal"/>
+      </plot>
+     </DockArea>
+     <DockArea name="...">
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Lines">
+       <range left="1088.568879" top="0.100000" right="1089.390562" bottom="-0.100000"/>
+       <limitY/>
+       <curve color="#f14cc1" name="/can/1/CCNC_0x161/DAW_ICON"/>
+      </plot>
+     </DockArea>
+     <DockArea name="...">
+      <plot flip_x="false" mode="TimeSeries" flip_y="false" style="Dots">
+       <range left="1088.568879" top="575.775000" right="1089.390562" bottom="543.225000"/>
+       <limitY/>
+       <curve color="#bcbd22" name="/pandaStates/0/safetyTxBlocked"/>
+      </plot>
+     </DockArea>
+    </DockSplitter>
+   </Container>
+  </Tab>
+  <currentTabIndex index="3"/>
  </tabbed_widget>
  <use_relative_time_offset enabled="1"/>
  <!-- - - - - - - - - - - - - - - -->
@@ -121,12 +186,6 @@
   <plugin ID="CSV Exporter"/>
  </Plugins>
  <!-- - - - - - - - - - - - - - - -->
- <previouslyLoaded_Datafiles>
-  <fileInfo filename="../tmpkgs3ntkk.rlog" prefix="">
-   <selected_datasources value=""/>
-   <plugin ID="DataLoad Rlog"/>
-  </fileInfo>
- </previouslyLoaded_Datafiles>
  <!-- - - - - - - - - - - - - - - -->
  <customMathEquations/>
  <snippets/>
